--- a/yomi.html
+++ b/yomi.html
@@ -4,6 +4,11 @@
 <title> </title>
 </head>
 <body>
-Yomutsu Shikome, Yomutsu Ikusa, Tsukuyomi. 
+<h1> Japanese Mythology </h1>
+<h2> Denizens of Darkness</h2>
+<h1> Part 1: The Servants </h2> 
+<p>Yomutsu Shikome, Yomutsu Ikusa</p>
+<p> These two figures are what many people associate when talking about 
+<strong> Yomi </strong>, or the Japanese Underworld.  </p> 
 </body>
 </html>
