--- a/yomi.html
+++ b/yomi.html
@@ -8,7 +8,26 @@
 <h2> Denizens of Darkness</h2>
 <h1> Part 1: The Servants </h2> 
 <p>Yomutsu Shikome, Yomutsu Ikusa</p>
-<p> These two figures are what many people associate when talking about 
-<strong> Yomi </strong>, or the Japanese Underworld.  </p> 
-</body>
+<p> <a href="https://en.wikipedia.org/wiki/Japanese_mythology">link 
+text</a> <p> These two figures are what many people associate when talking about 
+<strong> <a href="https://en.wikipedia.org/wiki/Yomi">link text</a>>link 
+text</a> </strong>, or the Japanese Underworld.  </p> 
+
+
+<h1> Legendary Weapons </h1> 
+<ol> 
+<li> Ame-no-nuhoko </li> 
+<li> Kusanagi-no-Tsurugi </li> 
+<li> Honjo Masamune <li>
+</hl>
+
+<h1> Major Goddesses </h1> 
+<ul> 
+<li> Izanami </il> 
+<li> Kushinada-Hime </li> 
+<li> Kikuri-Hime </li> 
+<li> Amaterasu </li> 
+<li><a href= "https://en.wikipedia.org/wiki/Ame-no-Uzume">link text</a> 
+</u1>
+</body> 
 </html>
