--- a/yomi.html
+++ b/yomi.html
@@ -5,7 +5,17 @@
 <title> </title>
 </head>
 <body>
-<h1> Japanese Mythology </h1>
+
+<div id="intro">
+<p> Welcome to the world of Japanese mythology, one of the very few 
+belief systems where there are literally thousand gods.</p> <p> Most 
+polytheistic religions are luck enough to get a few hundred deities to 
+worship.</p>  <p>> Japanese mythology, along with Hinduism, is host to 
+lots of legendary figures both minor and major for basically every group, hobby, pastime, or 
+occupation you can think of.</p>
+
+
+<h1 class = "spotlight"> Japanese Mythology </h1>
 <h2> Denizens of Darkness</h2>
 <h1> Part 1: The Servants </h2> 
 <p>Yomutsu Shikome, Yomutsu Ikusa</p>
