--- a/indexofyomi.html
+++ b/indexofyomi.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html> 
 <html lang="en">
 <head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" type="text/css" href="./stylish.css">
 <title> </title>
 </head>
 <body>
 
-<div id="intro">
-<p> Welcome to the world of Japanese mythology, one of the very few 
+<div id="intro"> 
+<p class="spotlight" > Welcome to the world of Japanese mythology, one of the very few 
 belief systems where there are literally thousand gods.</p> <p> Most 
 polytheistic religions are luck enough to get a few hundred deities to 
 worship.</p>  <p>> Japanese mythology, along with Hinduism, is host to 
@@ -17,28 +17,29 @@ occupation you can think of.</p>
 
 <h1 class = "spotlight"> Japanese Mythology </h1>
 <h2> Denizens of Darkness</h2>
-<h1> Part 1: The Servants </h2> 
+<h1> Part 1: The Servants </h1> 
 <p>Yomutsu Shikome, Yomutsu Ikusa</p>
 <p> <a href="https://en.wikipedia.org/wiki/Japanese_mythology">link 
-text</a> <p> These two figures are what many people associate when talking about 
-<strong> <a href="https://en.wikipedia.org/wiki/Yomi">link text</a>>link 
-text</a> </strong>, or the Japanese Underworld.  </p> 
+text</a> </p> <p> These two figures are what many people associate when 
+talking about <strong> <a href="https://en.wikipedia.org/wiki/Yomi">link text</a> 
+</strong>, or the Japanese Underworld.  </p> 
 
 
 <h1> Legendary Weapons </h1> 
 <ol> 
 <li> Ame-no-nuhoko </li> 
 <li> Kusanagi-no-Tsurugi </li> 
-<li> Honjo Masamune <li>
-</hl>
+<li> Honjo Masamune </li>
+</ol>
 
 <h1> Major Goddesses </h1> 
 <ul> 
-<li> Izanami </il> 
+<li> Izanami </li> 
 <li> Kushinada-Hime </li> 
 <li> Kikuri-Hime </li> 
 <li> Amaterasu </li> 
-<li><a href= "https://en.wikipedia.org/wiki/Ame-no-Uzume">link text</a> 
-</u1>
+<li><a href= "https://en.wikipedia.org/wiki/Ame-no-Uzume">link text</a> </li> 
+
+</ul> 
 </body> 
 </html>
